add basic PropEr test for encoding/decoding

--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,14 @@
 {minimum_otp_vsn, "20"}.
 {plugins, []}.
 
+{profiles, [
+	    {test, [
+		    {deps, [
+			    {proper, "1.2.0"}
+			   ]}
+		   ]}
+	   ]}.
+
 %% xref checks to run
 {xref_checks, [undefined_function_calls, undefined_functions,
 	       locals_not_used, deprecated_function_calls,
