add helper to use proper to generate a PFCP PCAP file

--- a/rebar.config
+++ b/rebar.config
@@ -9,11 +9,20 @@
 {plugins, []}.
 
 {profiles, [
-	    {test, [
-		    {deps, [
-			    {proper, "1.2.0"}
-			   ]}
-		   ]}
+	    {test,
+	     [{deps,
+	       [{proper, "1.2.0"}]}
+	     ]},
+	    {pcap,
+	     [{deps,
+	       [{flower, {git, "git://github.com/travelping/flower.git",
+			  {branch, "master"}}},
+		{gen_socket, {git, "git://github.com/travelping/gen_socket.git",
+			      {branch, "master"}}},
+		{pcapng, {git, "git://github.com/travelping/pcapng.git",
+			  {branch, "master"}}},
+		{proper, "1.2.0"}]}
+	     ]}
 	   ]}.
 
 %% xref checks to run
