--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,12 @@
+%-*-Erlang-*-
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 
 {deps, [
-	{lager, "3.5.2"},
-	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.0"}}}
+	{lager, "3.6.3"},
+	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.2"}}}
 ]}.
 
-{minimum_otp_vsn, "20"}.
+{minimum_otp_vsn, "20.1"}.
 {plugins, []}.
 
 {profiles, [
