fix specification for Travis-CI builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,18 @@ language: erlang
 otp_release:
  - 20.1.7
  - 20.2.4
- - 20.3.8.3
+ - 20.3.8.2
  - 21.0.4
 
 install: "true"
 
+before_script:
+  - wget https://s3.amazonaws.com/rebar3/rebar3
+  - chmod u+x ./rebar3
+
 script:
-  - rebar3 compile
-  - rebar3 do xref, ct, coveralls send
+  - ./rebar3 compile
+  - ./rebar3 do xref, ct, coveralls send
 
 notifications:
   slack:
