upgrade dependencies and drop old rebar compatibility stuff
Also, switch to travis-ci.com.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 sudo: false
-
 dist: xenial
 
 language: erlang
 
 otp_release:
- - 20.1.7
- - 20.2.4
- - 20.3.8.2
- - 21.0.4
+ - 20.3.8.5
+ - 21.1.4
+ - 21.2.5
 
 install: "true"
 
@@ -18,7 +16,9 @@ before_script:
 
 script:
   - ./rebar3 compile
-  - ./rebar3 do xref, ct, coveralls send
+  - ./rebar3 xref
+  - ./rebar3 ct
+  - (DEBUG=1 ./rebar3 as test do coveralls send || /bin/true)
 
 notifications:
   slack:
