--- a/rebar.config
+++ b/rebar.config
@@ -2,17 +2,18 @@
 {erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 
 {deps, [
-	{lager, "3.6.3"},
+	{lager, "3.6.8"},
 	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.2"}}}
 ]}.
 
-{minimum_otp_vsn, "20.1"}.
+{minimum_otp_vsn, "20.3"}.
 {plugins, []}.
 
 {profiles, [
 	    {test,
 	     [{deps,
-	       [{proper, "1.2.0"}]}
+	       [{proper, "1.3.0"}]},
+	      {plugins, [coveralls]}
 	     ]},
 	    {pcap,
 	     [{deps,
@@ -22,7 +23,8 @@
 			      {branch, "master"}}},
 		{pcapng, {git, "git://github.com/travelping/pcapng.git",
 			  {branch, "master"}}},
-		{proper, "1.2.0"}]}
+		{proper, "1.3.0"}]},
+	      {plugins, [coveralls]}
 	     ]}
 	   ]}.
 
@@ -33,3 +35,7 @@
 
 {cover_enabled, true}.
 {cover_export_enabled, true}.
+{do_coveralls_after_ct, false}.
+{do_coveralls_after_eunit, false}.
+{coveralls_coverdata, "_build/test/cover/ct.coverdata"}.
+{coveralls_service_name, "travis-ci"}.
