--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,7 @@
 %-*-Erlang-*-
-{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+{erl_opts, [debug_info]}.
 
 {deps, [
-	{lager, "3.6.8"},
 	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.2"}}}
 ]}.
 
