--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %-*-Erlang-*-
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info]}. % bin_opt_info
 
 {deps, [
 	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.2"}}}
