--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 	    {test,
 	     [{deps,
 	       [{proper, "1.3.0"}]},
-	      {plugins, [coveralls]}
+	      {plugins, [{coveralls, {git, "https://github.com/RoadRunnr/coveralls-erl.git", {branch, "feature/git-info"}}}]}
 	     ]},
 	    {pcap,
 	     [{deps,
@@ -23,7 +23,7 @@
 		{pcapng, {git, "git://github.com/travelping/pcapng.git",
 			  {branch, "master"}}},
 		{proper, "1.3.0"}]},
-	      {plugins, [coveralls]}
+	      {plugins, [{coveralls, {git, "https://github.com/RoadRunnr/coveralls-erl.git", {branch, "feature/git-info"}}}]}
 	     ]}
 	   ]}.
 
@@ -37,4 +37,5 @@
 {do_coveralls_after_ct, false}.
 {do_coveralls_after_eunit, false}.
 {coveralls_coverdata, "_build/test/cover/ct.coverdata"}.
-{coveralls_service_name, "travis-ci"}.
+{coveralls_service_name, "github"}.
+{coveralls_parallel, true}.
