--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,7 @@
 %-*-Erlang-*-
 {erl_opts, [debug_info]}.
 
-{deps, [
-	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.3"}}}
-]}.
+{deps, []}.
 
 {minimum_otp_vsn, "20.3"}.
 {plugins, [rebar3_hex]}.
