remove all dialyzer warning
activate dialyzer and change 'undefined' in undefined

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
            rebar3 do xref
            rebar3 do ct
+           rebar3 do dialyzer
     - name: Coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
